--- a/pom.xml
+++ b/pom.xml
@@ -166,6 +166,14 @@
 			<artifactId>netty-all</artifactId>
 			<version>4.1.22.Final</version>
 		</dependency>
+
+		<!-- zookeeper -->
+		<dependency>
+			<groupId>org.apache.zookeeper</groupId>
+			<artifactId>zookeeper</artifactId>
+			<version>3.4.10</version>
+			<type>pom</type>
+		</dependency>
 	</dependencies>
 	<build>
 		<finalName>spring-demo</finalName>
