--- a/pom.xml
+++ b/pom.xml
@@ -174,6 +174,13 @@
 			<version>3.4.10</version>
 			<type>pom</type>
 		</dependency>
+
+		<!-- quartz -->
+		<dependency>
+			<groupId>org.quartz-scheduler</groupId>
+			<artifactId>quartz</artifactId>
+			<version>2.3.0</version>
+		</dependency>
 	</dependencies>
 	<build>
 		<finalName>spring-demo</finalName>
